Fix for buttons on mobile :lipstick:

--- a/app/client/modules/Buttons/ButtonSupport.scss
+++ b/app/client/modules/Buttons/ButtonSupport.scss
@@ -36,7 +36,7 @@ div.supportoptions {
     }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
 
     a.buttonSupport {
         display: block;
